# kowai

./: .gitignore  BUILD_SYSTEM_SUMMARY.md  READE.md  README.md  build.py  index.html  jest.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  prd.txt  setup.sh  tailwind.config.ts  tsconfig.spec.json
backend/: .dockerignore  DEPLOYMENT.md  DOCS_ARQUITECTURE_SUMMARY.md  DOCUMENTATION.md  Dockerfile  README.docker.md  docker-compose.yml  go.mod  go.sum  init-db.sql  main.py  pyproject.toml
backend/app/: main.py
backend/app/ai/: agents.py
backend/app/ai/nodes/agents/: advisor.py  (+6 more)
backend/app/api/middleware/: compression_middleware.py  logging_middleware.py  security_middleware.py
backend/app/api/v1/: __init__.py
backend/app/core/: config.py
backend/app/core/logging/: config.py
backend/app/database/models/: models.py
backend/app/infrastructure/monitoring/: health.py
backend/cmd/server/: main.go
backend/config/: nginx.conf
backend/internal/core/domain/: models.go
backend/internal/core/ports/: ports.go
backend/internal/core/services/: services_test.go
backend/k8s/base/: 00-namespace.yaml  01-storage.yaml  02-mariadb.yaml  03-redis.yaml  04-prefect.yaml  05-backend.yaml  06-ingress.yaml  07-monitoring.yaml  08-security.yaml
backend/k8s/production/: kustomization.yaml  production-patches.yaml
backend/k8s/production/secrets/: database-url  secret-key
backend/scripts/: build.sh  start.sh
backend/scripts/deployment/: deploy-k8s-prod.sh  deploy-swarm-dev.sh
backend/secrets/: db_password.txt  redis_password.txt
(+62 files in other folders)
